--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="header">
-        Header Logo
+        <div id="logo">Header Logo</div>
         <ul>
             <li>header link one</li>
             <li>header link two</li>
@@ -17,9 +17,11 @@
     </div>
     <div id="content">
         <div id="first-section">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button>Sign up</button>
+            <div id="text">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button>Sign up</button>
+            </div>
             <img src="./img/placeholder.webp">
         </div>
         <div id="second-section">
