Improve tag use

--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="header">
+    <header>
         <div id="logo">Header Logo</div>
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
-    </div>
-    <div id="content">
-        <div id="first-section">
+        <nav>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="first">
             <div id="text">
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button>Sign up</button>
             </div>
             <img src="./img/placeholder.webp">
-        </div>
-        <div id="second-section">
+        </section>
+        <section id="second">
             <h2>Some random information.</h2>
             <div class="images">
                 <img src="./img/placeholder.webp">
@@ -45,19 +47,19 @@
                 <img src="./img/placeholder.webp">
                 <p>this is some subtext under an illustration or image</p>
             </div>
-        </div>
-        <div id="third-section">
+        </section>
+        <section id="third">
             <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <p>-Thor, God of Thunder</p>
-        </div>
-        <div id="fourth-section">
+        </section>
+        <section id="fourth">
             <h3>Call to action! It's time!</h3>
             <p>Sign up for our product by clicking that button right over there!</p>
             <button>Sign up</button>
-        </div>
-    </div>
-    <div id="footer">
+        </section>
+    </main>
+    <footer>
         <p>Copyright © The Odin Project 2021</p>
-    </div>
+    </footer>
 </body>
 </html>
