--- a/index.html
+++ b/index.html
@@ -27,25 +27,27 @@
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button>Sign up</button>
             </div>
-            <img src="./img/placeholder.webp">
+            <div id="img-placeholder"></div>
         </section>
         <section id="second">
             <h2>Some random information.</h2>
-            <div class="images">
-                <img src="./img/placeholder.webp">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="images">
-                <img src="./img/placeholder.webp">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="images">
-                <img src="./img/placeholder.webp">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="images">
-                <img src="./img/placeholder.webp">
-                <p>this is some subtext under an illustration or image</p>
+            <div id="content">
+                <div class="images">
+                    <div class="img"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="images">
+                    <div class="img"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="images">
+                    <div class="img"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="images">
+                    <div class="img"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
             </div>
         </section>
         <section id="third">
