--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
     </header>
     <main>
         <section id="first">
-            <div id="text">
+            <div class="text">
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button>Sign up</button>
             </div>
-            <div id="img-placeholder"></div>
+            <div id="img-placeholder">Image placeholder</div>
         </section>
         <section id="second">
             <h2>Some random information.</h2>
-            <div id="content">
+            <div class="content">
                 <div class="images">
                     <div class="img"></div>
                     <p>this is some subtext under an illustration or image</p>
@@ -51,13 +51,17 @@
             </div>
         </section>
         <section id="third">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <p>-Thor, God of Thunder</p>
+            <p id="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p id="author">-Thor, God of Thunder</p>
         </section>
         <section id="fourth">
-            <h3>Call to action! It's time!</h3>
-            <p>Sign up for our product by clicking that button right over there!</p>
-            <button>Sign up</button>
+            <div class="content">
+                <div class="text">
+                    <h3>Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button>Sign up</button>
+            </div>
         </section>
     </main>
     <footer>
